--- a/environment-1/posc1020-lecture-environment-1.Rmd
+++ b/environment-1/posc1020-lecture-environment-1.Rmd
@@ -153,7 +153,7 @@ LOTI %>%
   labs(title = "Annual Mean Temperature Anomalies (in Celsius) Relative to 1950-1980 Base Period",
        subtitle = "Thing is we've known about this for like the past 30 years and...",
        caption = "Data: ?LOTI in stevedata (via NASA/GISS). Data subset to most recent month in data (September).",
-       y = "Mean Temperature Anomalies (September)") +
+       y = "Mean Temperature Anomalies (September)", x = "") +
   geom_hline(yintercept = 0, linetype = "dashed")
 ```
 
@@ -167,7 +167,7 @@ LOTI %>%
   ggplot(.,aes(year(date),value)) + geom_line() + 
   geom_smooth(method="loess") +
   scale_x_continuous(breaks=seq(1880, 2015, by = 5)) +
-  ylim(-0.5, 4.1) +
+  #ylim(-0.5, 4.1) +
 #  scale_x_date(date_breaks = "10 years", date_minor_breaks = "2 months", date_labels = "%Y") +
   theme_steve_web() +
   geom_hline(yintercept = 2, linetype = "dashed") +
@@ -181,7 +181,7 @@ LOTI %>%
   labs(title = "Annual Mean Temperature Anomalies (in Celsius) Relative to 1950-1980 Base Period",
        subtitle = "Thing is we've known about this for like the past 30 years and...",
        caption = "Data: ?LOTI in stevedata (via NASA/GISS). Data subset to most recent month in data (September).",
-       y = "Mean Temperature Anomalies (September)") +
+       y = "Mean Temperature Anomalies (September)", x = "") +
   geom_hline(yintercept = 0, linetype = "dashed")
 ```
 
@@ -473,7 +473,8 @@ ODGI %>%
   labs(title = "Chlorofluorocarbon (CFC) Emissions Have (Generally) Fallen As Well",
        subtitle = "This followed because costs were concentrated on a few countries, as were the proposed benefits.",
        caption = "Data: ?ODGI in stevedata (via NOAA Ozone Depleting Gas Index)",
-       color = "", linetype="")
+       color = "", linetype="",
+       x = "", y = "Parts per Trillion")
 
 ```
 
